@@ -247,14 +247,8 @@ end_interaction_flow ()
 void
 present_main_window ()
 {
-  GtkWidget *main_vbox =
-    gtk_bin_get_child (GTK_BIN(get_main_window ()));
-
   reset_idle_timer ();
-
   main_window_shown = true;
-  gtk_widget_show_all (main_vbox);
-  gtk_widget_show_all (get_main_toolbar ());
   gtk_window_present (get_main_window ());
 }
 
